--- a/ZMapper/Properties/Resources.resx
+++ b/ZMapper/Properties/Resources.resx
@@ -148,6 +148,12 @@
   <data name="D9" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\D9.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="DPOI" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DPOI.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="DPOISelector" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DPOISelector.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ItemLayout" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ItemLayout.json;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -168,6 +174,12 @@
   </data>
   <data name="marksDungeon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\marksDungeon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="OWPOI" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OWPOI.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="OWPOISelector" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OWPOISelector.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="unvisited" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\unvisited.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
