--- a/ZMapper/Properties/Resources.resx
+++ b/ZMapper/Properties/Resources.resx
@@ -193,4 +193,10 @@
   <data name="visitedDungeon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\visitedDungeon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="DPOIMini" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DPOIMini.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="OWPOIMini" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OWPOIMini.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
