ADD Topmost option, click thumb to view level | FIX corrected default cursor position

--- a/ZMapper/Todo.txt
+++ b/ZMapper/Todo.txt
@@ -1,8 +1,5 @@
 ﻿Now
-- Improve dungeon stair numbers
-- Save "Active" settings
-- Option to not accept focus when clicking on client area
-- Option for always on top
+- Save settings
 
 Soon
 - Click on dungeon, go to dungeon (if it's the current dungeon, go to OW)
