--- a/ZMapper/Properties/Resources.resx
+++ b/ZMapper/Properties/Resources.resx
@@ -199,4 +199,10 @@
   <data name="OWPOIMini" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\OWPOIMini.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ZMap" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ZMap.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ZMapRed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ZMapRed.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
