--- a/ZMapper/Properties/Resources.resx
+++ b/ZMapper/Properties/Resources.resx
@@ -205,4 +205,7 @@
   <data name="ZMapRed" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ZMapRed.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="HTMLRendererLicense" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HTMLRendererLicense.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
