--- a/ZMapper/Properties/Resources.resx
+++ b/ZMapper/Properties/Resources.resx
@@ -208,4 +208,28 @@
   <data name="HTMLRendererLicense" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\HTMLRendererLicense.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="Help" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Help.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HelpAbout" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HelpAbout.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="HelpCSS" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HelpCSS.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="HelpInput" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HelpInput.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="HelpLicense" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HelpLicense.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="HelpNotFound" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HelpNotFound.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="HelpOptions" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HelpOptions.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="img_input" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hjoet5yi.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
