--- a/ZMapper/Todo.txt
+++ b/ZMapper/Todo.txt
@@ -1,6 +1,6 @@
 ﻿Soon
+- Indicators for POI input
 - Goto target--Move cursor to corresponding dungeon staircase, or from OW to marked dungeon
 
 And then
-- HTML help
 - Configurable input
