--- a/ZMapper/Form1.resx
+++ b/ZMapper/Form1.resx
@@ -153,17 +153,15 @@
   <data name="btnSave.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIySURBVDhPrZLfS5NRGMfff6H7boIuuq2pMZyL1eAt11CW
-        DcOKsB9vpFmaLtNExco0av6CbIVLJ61Wk3BSkT/AFCkRZSpZmrmiJQ41xSaCwdfznL15XEUX0Reem5f3
-        8znnec4j/Zc8fxYGla91CS3eRTx0z6OpMYS7jmnU1X6B/VYA18snUVoyjsKCt8jLHcH5c36ouCQR2NUJ
-        1Nas4G9ZXlmFKbULh1Kf8lJxSfI+WeCCyopv6q+/h+DQ/DJ2WV5Ao1FgPegRAveDOS4oLfmq/h6dn/DH
-        4AJizD4UXJrCAUuzEDgbZrjgou2DiohshIcnQtgme5GTPYbkJKcQ1N8OckHW2REVi+RXuM8fxGaDG4oy
-        ALPZIQQ11Z+5QDk1oKJ/hjv7P2FTfCMOH3mFxMQ6IbhROYWOdrCnBI4dfwPr0V4+bRoY9UzXppMjcDdS
-        rC8hy3YhuFI2gTYf2A4Aza4f7N2/o/zaLB8qDYx6zszwr8P7k1thNFYIweXCMXgeAfedq2xxwjClZUeV
-        Jd2GtDNFETiJwfs8MBjKhMCWN8pgoLoqzE8miH1GjE7G4PsZjE7OQsm9ij2mFg7rdrug1xcJAa2l4w7W
-        r00Cgk/n38S7wBwC04u4UGxHrMHF4CbEJtyDLj5fCDIzhljfSxzeavRgyw4Zj9t64GvvQ0d3P3pfD2Kv
-        2QqNvgFxDN6urYdWmyMElJMnevh60obRktA701PRtGlg1DOdSkXwzrisaMG/RZLWAE60OMW5fNhvAAAA
-        AElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAG3SURBVDhPrZLdK4NRHMefO0py4YJSXLjQ/gvyGvLSYoXG
+        igvlJSEuZhQakZREXlMskZC2Ndmw2cw2Y495KaVcuNmFXEm5+Nrv8Dh7NLuQU5+b3/l9P89zzvkJ/7JM
+        cxrszaixO12H7akabE2qsDFRhfVxJQyjFVjVl2FluBTLg8VYHCjEvC4fs9pcfMUFgcJ3tzdoWDAi1np9
+        e2c9tzdB6DQKLqAvUzGWgMKh51fWcx0MyAX021T8TSCFH55eWE9Q9MsFdGYqRhNEhsX7EOu5uvRCW5/F
+        BXRhVPwp+Bl2BZ5YT8DvRm9tJhfQbVMxUhAtbPU8sp5LnxPdqgwuoKeiIkENsbjw2BkdyjQuoHeWNvyM
+        Y/jPJI5knLsPGa3lKVxAQyJtEF1DczJ69PPQji3Bd2oNcwCf6wDNJclcQBNGRQkKtXT1M8x2EfsOEYOT
+        K/A698NY4D2xoKkoiQtoPKlIeMJECqxOEcduEaPTa/A4zDhzmBiavAQuoNlmG/ZP1O1DMGzbsLlnw47R
+        BqPlED3a4fCe8Rt1dhwX9GkUIzRZ0aD37qxOR1tlKjt3Y0Ei6nPi5YK/L0H4AKQIUWUQMSq+AAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="btnHelp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
