--- a/ZMapper/Form1.resx
+++ b/ZMapper/Form1.resx
@@ -126,7 +126,35 @@
   <metadata name="MainToolbar.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="FileOpener.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>256, 17</value>
+  </metadata>
+  <metadata name="FileSaver.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>367, 17</value>
+  </metadata>
+  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>467, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnHelp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAMZSURBVDhPdZNrSFNhGMfPcjfTbedsWkZWCJUaaRaJH6RN
+        zZqu6VrLOSusSGWGQRkUWahFqd02zYqKQM1Iy0pz3nXzMq+ghWaZKQSZUZjWh8gU8ul5z7pB9YcfDy/n
+        /f15z8s51L/iJD8TKlXl3RApc9vFEZc6xDgZlTmXK88K/LHlP1kZ5yaNzCtZv/9u/+FbI5MZleOzBFPz
+        +5mUguEJ3/jCPmmk+Tq1TCH8YfwRn60yRpXXFHPOPnbO9gWOlE+A8fZbSCh8A8k4j1VMwoWWadhysvGV
+        LNJ0Dw2BQ3SExyhziqJO28cO35+EqIsjsCbjMXjtvAJuihRYFncZvA/1Q1jWCBZ9gpBDNS9d5JnZ6HFY
+        m7siOmiB5mrfgZKPEJw+AJ6JXSD0jwWS1x+mYXzqKxy9UAKiOBuEnHoOirLmb7xQUy+qUuJzhEGp+SFp
+        9rEN6c/AY48dmF0trNzWNQiuyrNQ1zoAc3Nz4J5oBc+EdlDmjMBaY/nwvFXxKaRAIFGkVcszX0x6JXUA
+        Y7ACHYvEN7C4bs5ii0jcE23A6K3gndwNgUd7xnl+CddIAS2SH2/yPzg05aZvAlqH4vYGEGuLWX7KihMd
+        4J6EBTEN4LHDCn6pfe8E64x3SIFUuGbfo6X7ut8w2nqgtTVILTBxFvAxNrJy8JFWPFUViPVV7HOZvhkW
+        7a0fdVquuUEKnDkL15tEquJ+WtcGjMYCTLQFT1EBos35IFipYSdZi3UVQEfhc30PCMLz+ijRklRSMA/R
+        8+XZ3S7awc+0uhpoFW7c9gAMWZ3sCQxnOoHBNYGOqgWRwf6aH3jQjt4mUkDiyxHSBfyNpl6J5sk0rcbX
+        iHgITAQKShTJxDWtrgMX7dPPfIW5h+K5mtBb7NDxNRAtRyC5xw81t8/XtY5K1JWzjNqGp8FL3YJT0Tzj
+        rGka4svPt+A+cnkKhEfkn2EQHcXhFvMCki38MHMXP7YNfhFm6uD67bbgnptIBCJC/ooLEoSkIUUcZ2kp
+        R7a6jOK6luK6ACGXFoD842f6HSeEfKL+iBLRIuHIKkSMOL5/NhT1HXymgf6CU73XAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="btnNew.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -164,25 +192,6 @@
         TkSuQmCC
 </value>
   </data>
-  <data name="btnHelp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAMZSURBVDhPdZNrSFNhGMfPcjfTbedsWkZWCJUaaRaJH6RN
-        zZqu6VrLOSusSGWGQRkUWahFqd02zYqKQM1Iy0pz3nXzMq+ghWaZKQSZUZjWh8gU8ul5z7pB9YcfDy/n
-        /f15z8s51L/iJD8TKlXl3RApc9vFEZc6xDgZlTmXK88K/LHlP1kZ5yaNzCtZv/9u/+FbI5MZleOzBFPz
-        +5mUguEJ3/jCPmmk+Tq1TCH8YfwRn60yRpXXFHPOPnbO9gWOlE+A8fZbSCh8A8k4j1VMwoWWadhysvGV
-        LNJ0Dw2BQ3SExyhziqJO28cO35+EqIsjsCbjMXjtvAJuihRYFncZvA/1Q1jWCBZ9gpBDNS9d5JnZ6HFY
-        m7siOmiB5mrfgZKPEJw+AJ6JXSD0jwWS1x+mYXzqKxy9UAKiOBuEnHoOirLmb7xQUy+qUuJzhEGp+SFp
-        9rEN6c/AY48dmF0trNzWNQiuyrNQ1zoAc3Nz4J5oBc+EdlDmjMBaY/nwvFXxKaRAIFGkVcszX0x6JXUA
-        Y7ACHYvEN7C4bs5ii0jcE23A6K3gndwNgUd7xnl+CddIAS2SH2/yPzg05aZvAlqH4vYGEGuLWX7KihMd
-        4J6EBTEN4LHDCn6pfe8E64x3SIFUuGbfo6X7ut8w2nqgtTVILTBxFvAxNrJy8JFWPFUViPVV7HOZvhkW
-        7a0fdVquuUEKnDkL15tEquJ+WtcGjMYCTLQFT1EBos35IFipYSdZi3UVQEfhc30PCMLz+ijRklRSMA/R
-        8+XZ3S7awc+0uhpoFW7c9gAMWZ3sCQxnOoHBNYGOqgWRwf6aH3jQjt4mUkDiyxHSBfyNpl6J5sk0rcbX
-        iHgITAQKShTJxDWtrgMX7dPPfIW5h+K5mtBb7NDxNRAtRyC5xw81t8/XtY5K1JWzjNqGp8FL3YJT0Tzj
-        rGka4svPt+A+cnkKhEfkn2EQHcXhFvMCki38MHMXP7YNfhFm6uD67bbgnptIBCJC/ooLEoSkIUUcZ2kp
-        R7a6jOK6luK6ACGXFoD842f6HSeEfKL+iBLRIuHIKkSMOL5/NhT1HXymgf6CU73XAAAAAElFTkSuQmCC
-</value>
-  </data>
   <data name="toolStripButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -199,10 +208,4 @@
         TkSuQmCC
 </value>
   </data>
-  <metadata name="FileOpener.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>256, 17</value>
-  </metadata>
-  <metadata name="FileSaver.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>367, 17</value>
-  </metadata>
 </root>
