--- a/ZMapper/Todo.txt
+++ b/ZMapper/Todo.txt
@@ -1,6 +1,6 @@
 ﻿Soon
 - Goto target--Move cursor to corresponding dungeon staircase, or from OW to marked dungeon
-- Configurable input
+- POI input-KeyDown to accept otherwise-unmapped numeric keys?
 - Update (Options, Input) help for configurable input
 - Update readme text, Screenshot in readme
 - (Infrequent) Active window polling for the event where a valid window is activated but it doesn't properly register
